tests/snapshots/ast_test__ast_test__parse_comment.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document(
    Document {
        span: Span {
            start: 0,
            end: 13,
        },
        executable: None,
        elements: [
            CommentBlock(
                CommentBlock {
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                    raw: [
                        "# I'm comment",
                    ],
                },
            ),
        ],
    },
)
