tests/snapshots/ast_test__ast_test__parse_comment_block.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens)"
---
Document {
    span: Span {
        start: 0,
        end: 35,
    },
    executable: None,
    elements: [
        CommentBlock {
            span: Span {
                start: 0,
                end: 35,
            },
            raw: [
                "# I'm comment",
                "# Second line comment",
            ],
        },
    ],
}
