tests/snapshots/ast_test__ast_test__parse_comment_multiple_block.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document(
    Document {
        span: Span {
            start: 0,
            end: 36,
        },
        executable: None,
        elements: [
            CommentBlock(
                CommentBlock {
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                    raw: [
                        "# I'm comment",
                    ],
                },
            ),
            CommentBlock(
                CommentBlock {
                    span: Span {
                        start: 15,
                        end: 36,
                    },
                    raw: [
                        "# Second line comment",
                    ],
                },
            ),
        ],
    },
)
