tests/snapshots/ast_test__ast_test__parse_comment_multiple_block_2.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens)"
---
Document {
    span: Span {
        start: 0,
        end: 41,
    },
    executable: None,
    elements: [
        CommentBlock {
            span: Span {
                start: 0,
                end: 13,
            },
            raw: [
                "# I'm comment",
            ],
        },
        CommentBlock {
            span: Span {
                start: 20,
                end: 41,
            },
            raw: [
                "# Second line comment",
            ],
        },
    ],
}
