tests/snapshots/ast_test__ast_test__parse_comment_multiple_lines.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document(
    Document {
        span: Span {
            start: 0,
            end: 39,
        },
        executable: None,
        elements: [
            CommentBlock(
                CommentBlock {
                    span: Span {
                        start: 0,
                        end: 39,
                    },
                    raw: [
                        "# I'm comment",
                        "# Second line comment",
                    ],
                },
            ),
        ],
    },
)
