tests/snapshots/ast_test__ast_test__parse_executable.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document(
    Document {
        span: Span {
            start: 0,
            end: 9,
        },
        executable: Some(
            "#!/bin/sh",
        ),
        elements: [],
    },
)
