tests/snapshots/ast_test__ast_test__parse_sample_document_with_type_configurable.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document:
  span:
    start: 0
    end: 74
  executable: ~
  elements:
    - Variable:
        span:
          start: 13
          end: 34
        comment: ~
        name: FOO
        variable_type: String
        options_variable_type:
          Max:
            OptionValue:
              span:
                start: 30
                end: 33
              value: "500"
        default_value: ~
        nullable: false
    - Variable:
        span:
          start: 47
          end: 74
        comment: ~
        name: BIZ
        variable_type: String
        options_variable_type:
          Max:
            OptionValue:
              span:
                start: 64
                end: 67
              value: "500"
          Min:
            OptionValue:
              span:
                start: 72
                end: 73
              value: "2"
        default_value: ~
        nullable: false

