tests/snapshots/ast_test__ast_test__parse_sample_document_with_type_configurable_binary_option.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document:
  span:
    start: 0
    end: 84
  executable: ~
  elements:
    - Variable:
        span:
          start: 13
          end: 44
        comment: ~
        name: FOO
        variable_type: String
        options_variable_type:
          Max:
            OptionValue:
              span:
                start: 30
                end: 33
              value: "500"
          Sensitive: ~
        default_value: ~
        nullable: false
    - Variable:
        span:
          start: 57
          end: 84
        comment: ~
        name: BIZ
        variable_type: String
        options_variable_type:
          Max:
            OptionValue:
              span:
                start: 74
                end: 77
              value: "500"
          Min:
            OptionValue:
              span:
                start: 82
                end: 83
              value: "2"
        default_value: ~
        nullable: false

