tests/snapshots/ast_test__ast_test__parse_sample_document_with_type_configurable_multiline.snap
---
source: tests/ast_test.rs
expression: "AST::parse(tokens).unwrap()"
---
Document(
    Document {
        span: Span {
            start: 0,
            end: 104,
        },
        executable: None,
        elements: [
            Variable(
                Variable {
                    span: Span {
                        start: 13,
                        end: 104,
                    },
                    comment: None,
                    name: "FOO",
                    variable_type: Some(
                        "String",
                    ),
                    options_variable_type: Some(
                        {
                            "Max": Some(
                                OptionValue(
                                    OptionValue {
                                        span: Span {
                                            start: 53,
                                            end: 56,
                                        },
                                        value: "500",
                                    },
                                ),
                            ),
                            "Min": Some(
                                OptionValue(
                                    OptionValue {
                                        span: Span {
                                            start: 83,
                                            end: 84,
                                        },
                                        value: "2",
                                    },
                                ),
                            ),
                        },
                    ),
                    default_value: None,
                    nullable: false,
                },
            ),
        ],
    },
)
