tests/snapshots/ast_test__ast_test__parse_unexpected_token.snap
---
source: tests/ast_test.rs
expression: err
---
Some(
    SyntaxError {
        message: "Unexpected token",
        span: Span {
            start: 15,
            end: 16,
        },
    },
)
